[package]
name = "is_computer_on"
version = "1.0.0"
authors = ["lucashorward <lucas.horward@gmail.com>"]
edition = "2018"
repository = "https://github.com/lucashorward/is_computer_on"
keywords = ["is_computer_on", "computer", "on", "wasm", "rust", "rust-wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"